--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,17 +96,18 @@ header nav ul li a {
 }
 /* Hero Style End */
 
-.intro {
-    text-align: center;
-}
-
-.intro h2 {
+.section-title {
     font-size: 55px;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
-    border-bottom: 3px solid #fce138;
     display: inline-block;
+    border-bottom: 3px solid;
+}
+
+/* What We Do section  */
+.intro {
+    text-align: center;
 }
 
 .intro p {
@@ -115,6 +116,44 @@ header nav ul li a {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+/* What You Do section  */
+.steps {
+    text-align: center;
+    background: #fce138;
+}
+
+.steps div {
+    margin-bottom: 80px;
+}
+
+.steps img {
+    width: 15%;
+    margin: 10px 0;
+}
+
+.steps h3 {
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+}
+
+.steps p {
+    color: #39a6b2;
+    font-size: 23px;
+}
+
+.steps span {
+    font-size: 38px;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
 }
 
 /* apply styles to <footer> */
