--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ section {
 
 /* HERO STYLES START */
 .hero {
-    background-image: url('../images/hero-bg.jpg');
+    background-image: url('./assets/images/hero-bg.jpeg');
     background-size: cover;
     display: flex;
     justify-content: center;
